work on implementing Phong Shading Model

--- a/Graphics_OpenGL_3D_Shading/Graphics_OpenGL_3D_Shading.vcxproj
+++ b/Graphics_OpenGL_3D_Shading/Graphics_OpenGL_3D_Shading.vcxproj
@@ -155,10 +155,13 @@
     <ClCompile Include="Shaders\LoadShaders.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="forShading.h" />
     <ClInclude Include="Object_Definitions.h" />
     <ClInclude Include="Shaders\LoadShaders.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Shaders\Phong.frag" />
+    <None Include="Shaders\Phong.vert" />
     <None Include="Shaders\simple.frag" />
     <None Include="Shaders\simple.vert" />
   </ItemGroup>
