--- a/Graphics_OpenGL_3D_Shading/Graphics_OpenGL_3D_Shading.vcxproj.filters
+++ b/Graphics_OpenGL_3D_Shading/Graphics_OpenGL_3D_Shading.vcxproj.filters
@@ -29,12 +29,21 @@
     <ClInclude Include="Shaders\LoadShaders.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="forShading.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\simple.frag">
       <Filter>리소스 파일</Filter>
     </None>
     <None Include="Shaders\simple.vert">
+      <Filter>리소스 파일</Filter>
+    </None>
+    <None Include="Shaders\Phong.frag">
+      <Filter>리소스 파일</Filter>
+    </None>
+    <None Include="Shaders\Phong.vert">
       <Filter>리소스 파일</Filter>
     </None>
   </ItemGroup>
