--- a/Graphics_OpenGL_3D_Shading/Graphics_OpenGL_3D_Shading.vcxproj
+++ b/Graphics_OpenGL_3D_Shading/Graphics_OpenGL_3D_Shading.vcxproj
@@ -160,6 +160,8 @@
     <ClInclude Include="Shaders\LoadShaders.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Shaders\Gouraud.frag" />
+    <None Include="Shaders\Gouraud.vert" />
     <None Include="Shaders\Phong.frag" />
     <None Include="Shaders\Phong.vert" />
     <None Include="Shaders\simple.frag" />
